added stuff for image view

--- a/app/app.html
+++ b/app/app.html
@@ -6,12 +6,19 @@
 
     <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 
+    <!--<link rel="stylesheet" href="vendor/jstree/default/style.min.css" />-->
+
     <script src="helpers/context_menu.js"></script>
     <script src="helpers/external_links.js"></script>
 
     <script src="app.js"></script>
+
 </head>
 <body>
+
+    <!--<div id="jstree_demo_div"></div>-->
+
+    <div id="image_list"></div>
 
     <div class="container">
         <h1 id="greet"></h1>
@@ -22,6 +29,9 @@
             You are in <strong id="env-name"></strong> environment.
         </p>
     </div>
+
+    <!--<script>window.$ = window.jQuery = require('./vendor/jquery/jquery.min.js');</script>-->
+    <!--<script src="./vendor/jstree/jstree.min.js"></script>-->
 
 </body>
 </html>
